# run_only_needed_actions

./: .pre-commit-config.yaml  LICENSE  README.md  action.yml  alternatives.md  pyproject.toml  requirements-ci.txt
.github/workflows/: _nested_workflow.yml  check.yml  run_on_push.yml  run_on_push_v1.yml
check_file_changed/: __init__.py  __version__.py  _args.py  _file_checker.py  _print.py  check_coverage.py  config.toml  set_output.py
tests/: test_checker.py
